Add pricing note under welcome

--- a/index.html
+++ b/index.html
@@ -193,6 +193,12 @@
       font-size: 14px;
       font-weight: bold;
     }
+
+    .alfred-note {
+      color: #ffdfb0;
+      font-size: 12px;
+      font-weight: bold;
+    }
     
     .user-section {
       background: rgba(255, 255, 255, 0.1);
@@ -548,6 +554,7 @@
       <img src="./hobo_ChatGPT Image Jan 26, 2026, 02_51_11 PM.png" alt="Hobo" class="alfred-image">
       <p class="alfred-name">Hi, I am Alfred</p>
       <p class="alfred-name">Welcome to BrokeAnt</p>
+      <p class="alfred-note">Cost is $2 CDN plus GST</p>
     </div>
     <div class="header-content">
       <h1>BrokeAnt Marketplace</h1>
