Update homepage cost note

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
       <img src="./hobo_ChatGPT Image Jan 26, 2026, 02_51_11 PM.png" alt="Hobo" class="alfred-image">
       <p class="alfred-name">Hi, I am Alfred</p>
       <p class="alfred-name">Welcome to BrokeAnt</p>
-      <p class="alfred-note">Cost is $2 CDN plus GST</p>
+      <p class="alfred-note">The cost is $2 CDN via e-transfer per location which gives you 20 listings. Ad free.</p>
     </div>
     <div class="header-content">
       <h1>BrokeAnt Marketplace</h1>
