--- a/index.html
+++ b/index.html
@@ -554,6 +554,7 @@
       <img src="./hobo_ChatGPT Image Jan 26, 2026, 02_51_11 PM.png" alt="Hobo" class="alfred-image">
       <p class="alfred-name">Hi, I am Alfred</p>
       <p class="alfred-name">Welcome to BrokeAnt</p>
+      <p class="alfred-note">Welcome to BrokeAnt - YOUR local, ad-free marketplace. For $2 per city, you get 20 listings and access to verified buyers and sellers in your area.</p>
       <p class="alfred-note">The cost is $2 CDN via e-transfer per location which gives you 20 listings. Ad free.</p>
     </div>
     <div class="header-content">
