Use advertisements wording on homepage

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     <div class="alfred-section">
       <img src="./hobo_ChatGPT Image Jan 26, 2026, 02_51_11 PM.png" alt="Hobo" class="alfred-image">
       <p class="alfred-name">Hi, I am Alfred</p>
-      <p class="alfred-note">Welcome to BrokeAnt - YOUR local, ad-free marketplace. For $2 per location, you get 20 listings and access to verified buyers and sellers in your area.</p>
+      <p class="alfred-note">Welcome to BrokeAnt - YOUR local, ad-free marketplace. For $2 per location, you get 20 advertisements and access to verified buyers and sellers in your area.</p>
       <p class="alfred-note">The cost is $2 CDN via e-transfer per location which gives you 20 listings. Ad free.</p>
     </div>
     <div class="header-content">
@@ -568,9 +568,9 @@
   </div>
   
   <div class="listings-section">
-    <h2>Latest Listings</h2>
+    <h2>Latest Advertisements</h2>
     <div class="listings-grid" id="listingsGrid">
-      <div class="no-listings">Loading listings...</div>
+      <div class="no-listings">Loading advertisements...</div>
     </div>
   </div>
   <div class="cities-grid" id="citiesGrid">
