--- a/payment-checkout.html
+++ b/payment-checkout.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complete Payment | BrokeAnt Marketplace</title>
-    <meta name="description" content="Complete your BrokeAnt registration payment to activate your account and start posting listings.">
+    <meta name="description" content="Complete your BrokeAnt registration payment to activate your account and start posting advertisements.">
     <link rel="canonical" href="https://www.brokeant.com/payment-checkout.html">
 
     <meta property="og:title" content="Complete Payment | BrokeAnt Marketplace">
-    <meta property="og:description" content="Complete your BrokeAnt registration payment to activate your account and start posting listings.">
+    <meta property="og:description" content="Complete your BrokeAnt registration payment to activate your account and start posting advertisements.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.brokeant.com/payment-checkout.html">
     <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
@@ -16,7 +16,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Complete Payment | BrokeAnt Marketplace">
-    <meta name="twitter:description" content="Complete your BrokeAnt registration payment to activate your account and start posting listings.">
+    <meta name="twitter:description" content="Complete your BrokeAnt registration payment to activate your account and start posting advertisements.">
     <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
 
     <style>
@@ -274,7 +274,7 @@
         </div>
 
         <div class="note">
-            This one-time $2.10 fee activates your account and gives you listing credits.
+            This one-time $2.10 fee activates your account and gives you advertisement credits.
         </div>
 
         <div class="steps">
