--- a/payment-status.html
+++ b/payment-status.html
@@ -145,7 +145,7 @@
         if (data.payment_status === 'verified') {
           box.textContent = 'Approved';
           box.className = 'status approved';
-          details.textContent = 'Your account is active. You can post listings now.';
+          details.textContent = 'Your account is active. You can post advertisements now.';
         } else {
           box.textContent = 'Pending';
           box.className = 'status pending';
