--- a/login.html
+++ b/login.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Login | BrokeAnt Marketplace</title>
-    <meta name="description" content="Log in to BrokeAnt to view listings, message sellers, and manage your items.">
+    <meta name="description" content="Log in to BrokeAnt to view advertisements, message sellers, and manage your items.">
     <link rel="canonical" href="https://www.brokeant.com/login.html">
 
     <meta property="og:title" content="Login | BrokeAnt Marketplace">
-    <meta property="og:description" content="Log in to BrokeAnt to view listings, message sellers, and manage your items.">
+    <meta property="og:description" content="Log in to BrokeAnt to view advertisements, message sellers, and manage your items.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.brokeant.com/login.html">
     <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
@@ -16,7 +16,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Login | BrokeAnt Marketplace">
-    <meta name="twitter:description" content="Log in to BrokeAnt to view listings, message sellers, and manage your items.">
+    <meta name="twitter:description" content="Log in to BrokeAnt to view advertisements, message sellers, and manage your items.">
     <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
 
   <style>
