--- a/melville/index.html
+++ b/melville/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Melville Listings | BrokeAnt Marketplace</title>
-    <meta name="description" content="Browse listings in Melville on BrokeAnt. Sign in to view details and contact sellers.">
+  <title>Melville Advertisements | BrokeAnt Marketplace</title>
+    <meta name="description" content="Browse advertisements in Melville on BrokeAnt. Sign in to view details and contact sellers.">
     <link rel="canonical" href="https://www.brokeant.com/melville/index.html">
 
-    <meta property="og:title" content="Melville Listings | BrokeAnt Marketplace">
-    <meta property="og:description" content="Browse listings in Melville on BrokeAnt. Sign in to view details and contact sellers.">
+    <meta property="og:title" content="Melville Advertisements | BrokeAnt Marketplace">
+    <meta property="og:description" content="Browse advertisements in Melville on BrokeAnt. Sign in to view details and contact sellers.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.brokeant.com/melville/index.html">
     <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
     <meta property="og:site_name" content="BrokeAnt Marketplace">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Melville Listings | BrokeAnt Marketplace">
-    <meta name="twitter:description" content="Browse listings in Melville on BrokeAnt. Sign in to view details and contact sellers.">
+    <meta name="twitter:title" content="Melville Advertisements | BrokeAnt Marketplace">
+    <meta name="twitter:description" content="Browse advertisements in Melville on BrokeAnt. Sign in to view details and contact sellers.">
     <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
 
   <style>
@@ -859,7 +859,7 @@
     const contactHTML = isOwner
       ? `<div class="contact">
         <strong>Verified Seller</strong>
-        <div class="contact-note">This is your listing.</div>
+        <div class="contact-note">This is your advertisement.</div>
       </div>`
       : `
       <div class="contact">
