Update homepage info block

--- a/index.html
+++ b/index.html
@@ -594,8 +594,11 @@
       <img src="/Cheerful%20ant%20on%20a%20forest%20path.png" alt="Cheerful Ant">
       <div>
         When you pay the $2 you will have access to all the items in your city, and all the cities that you are eligible to see.<br><br>
-        <strong>Brocante</strong> - "In France, a shop or market where secondhand goods are sold". But the French pronunciation is slightly different than the English way. So that's how I got my name. <strong>Broke Ant</strong>.<br><br>
-        Happy selling and buying!!<br><br>
+        BrokeAnt is your local, ad-free marketplace.<br>
+        For just $2 per location, you get 20 advertisements and access to verified buyers and sellers in that area.<br>
+        Post your items, browse nearby deals, and message sellers directly, no clutter, no hidden fees.<br>
+        Need more reach? You can request additional locations anytime to expand your audience.<br>
+        Happy buying and selling!<br><br>
         Even though emails are hidden by default, either person can choose to include their own email or phone number in a message if they want.
       </div>
     </div>
@@ -754,8 +757,11 @@ function closeWelcomeModal(e) {
           <img src="/Cheerful%20ant%20on%20a%20forest%20path.png" alt="Cheerful Ant">
           <div>
             When you pay the $2 you will have access to all the items in your city, and all the cities that you are eligible to see.<br><br>
-            <strong>Brocante</strong> - "In France, a shop or market where secondhand goods are sold". But the French pronunciation is slightly different than the English way. So that's how I got my name. <strong>Broke Ant</strong>.<br><br>
-            Happy selling and buying!!<br><br>
+            BrokeAnt is your local, ad-free marketplace.<br>
+            For just $2 per location, you get 20 advertisements and access to verified buyers and sellers in that area.<br>
+            Post your items, browse nearby deals, and message sellers directly, no clutter, no hidden fees.<br>
+            Need more reach? You can request additional locations anytime to expand your audience.<br>
+            Happy buying and selling!<br><br>
             Even though emails are hidden by default, either person can choose to include their own email or phone number in a message if they want.
           </div>
         </div>
