--- a/my-listings.html
+++ b/my-listings.html
@@ -463,6 +463,45 @@
       .footer-corner img { width: 70px; }
       .footer-text { font-size: 10px; }
     }
+
+    .password-panel {
+      background: #fff;
+      border-radius: 12px;
+      padding: 18px 20px;
+      margin: 20px 0 10px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+    }
+    .password-panel h2 {
+      font-size: 18px;
+      margin-bottom: 12px;
+      color: #133d60;
+    }
+    .password-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+    .password-grid input {
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+    .password-grid .btn-post {
+      grid-column: 1 / -1;
+      justify-self: start;
+      padding: 10px 18px;
+    }
+    @media (max-width: 600px) {
+      .password-grid {
+        grid-template-columns: 1fr;
+      }
+      .password-grid .btn-post {
+        width: 100%;
+        justify-self: stretch;
+      }
+    }
+
 </style>
 </head>
 <body>
@@ -478,6 +517,18 @@
       <button onclick="requestCityAccess()">Request City</button>
     </div>
     <small>Each additional city costs $2 via e-transfer. Requests require admin approval.</small>
+  </div>
+
+
+  <div class="password-panel">
+    <h2>Change Password</h2>
+    <div class="password-grid">
+      <input type="password" id="currentPassword" placeholder="Current password" autocomplete="current-password">
+      <input type="password" id="newPassword" placeholder="New password (min 6)" autocomplete="new-password">
+      <input type="password" id="confirmPassword" placeholder="Confirm new password" autocomplete="new-password">
+      <button class="btn-post" onclick="changePassword()">Update Password</button>
+    </div>
+    <div id="passwordStatus" class="message"></div>
   </div>
 
   <div class="header">
@@ -620,6 +671,61 @@ function checkAuth() {
 }
 
 // Load user's listings
+
+function changePassword() {
+  const currentPassword = document.getElementById('currentPassword').value.trim();
+  const newPassword = document.getElementById('newPassword').value.trim();
+  const confirmPassword = document.getElementById('confirmPassword').value.trim();
+  const statusEl = document.getElementById('passwordStatus');
+
+  statusEl.className = 'message';
+  statusEl.textContent = '';
+
+  if (!currentPassword || !newPassword || !confirmPassword) {
+    statusEl.className = 'message error';
+    statusEl.textContent = 'All password fields are required.';
+    return;
+  }
+  if (newPassword.length < 6) {
+    statusEl.className = 'message error';
+    statusEl.textContent = 'New password must be at least 6 characters.';
+    return;
+  }
+  if (newPassword !== confirmPassword) {
+    statusEl.className = 'message error';
+    statusEl.textContent = 'New passwords do not match.';
+    return;
+  }
+
+  const formData = new FormData();
+  formData.append('action', 'change_password');
+  formData.append('current_password', currentPassword);
+  formData.append('new_password', newPassword);
+
+  fetch('/backend/api/users.php', {
+    method: 'POST',
+    body: formData,
+    credentials: 'include'
+  })
+  .then(r => r.json())
+  .then(data => {
+    if (data.success) {
+      statusEl.className = 'message success';
+      statusEl.textContent = 'Password updated.';
+      document.getElementById('currentPassword').value = '';
+      document.getElementById('newPassword').value = '';
+      document.getElementById('confirmPassword').value = '';
+    } else {
+      statusEl.className = 'message error';
+      statusEl.textContent = data.message || 'Unable to update password.';
+    }
+  })
+  .catch(() => {
+    statusEl.className = 'message error';
+    statusEl.textContent = 'Unable to update password.';
+  });
+}
+
 function loadListings() {
   fetch('/backend/api/listings.php?action=get_user_listings', {
     credentials: 'include'
