Add forgot/reset password flow

--- a/login.html
+++ b/login.html
@@ -179,6 +179,8 @@
   <div class="register-link">
     Don't have an account? <a href="register.html">Sign up here</a>
     <br>
+    <a href="/forgot-password.html">Forgot your password?</a>
+    <br>
     <a href="/index.html">Browse images without logging in</a>
   </div>
 </div>
